Fix main layout to remove extra scrollbar.

--- a/modules/cms/client/scss/_partials/_structure.scss
+++ b/modules/cms/client/scss/_partials/_structure.scss
@@ -11,6 +11,8 @@
     @import "./_menu";
     @import "./_switch";
     [data-lky-hook="main-area"] {
+        display: flex;
+        flex-direction: column;
         transition: transform $speed;
         overflow-y: auto;
         position: fixed;
